Deployment button alignment corrected.

--- a/src/main/resources/assets/css/main.less
+++ b/src/main/resources/assets/css/main.less
@@ -162,9 +162,9 @@ a,
   margin-bottom: 0;
 }
 
-.table > tbody > tr > td > .list-inline > li:last-child,
-.table > thead > tr > th > .list-inline > li:last-child {
-  padding-right: 0;
+.table > tbody > tr > td > .list-inline > li,
+.table > thead > tr > th > .list-inline > li {
+  padding: 0 0 5px 5px;
 }
 
 .list-inline-subtext {
